<resources>
    <string name="app_name">Convertisseur</string>

    <string name="lbl_activite">Convertisseur\nde\ndevises</string>
    <string name="lbl_devise_dep">Devise de départ</string>
    <string name="lbl_devise_arr">Devise d\'arrivée</string>
    <string name="lbl_montant">Montant</string>
    <string name="btn_conv">CONVERTIR</string>
    <string name="btn_quit">QUITTER</string>
    <string name="action_apropos">A propos</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_langage">Changer la langue</string>
    <string name="action_date">Changer la date</string>
    <string name="action_display">Changer l\'affichage</string>
    <string name="action_quitter">Quitter</string>

    <string name="btn_retour">RETOUR</string>
    <string name="lbl_resultat1">Le résultat est :</string>
    <string name="lbl_resultat2">Pas de résultat</string>

    <string name="message_ok">ok</string>
    <string name="message_err_dev_dep">Sélectionnez la devise de départ !</string>
    <string name="message_err_dev_arr">Sélectionnez la devise d\'arrivée !</string>
    <string name="message_err_mont">Saisissez un montant !</string>

    <string name="titre_activity_liste_devises">Liste des devises</string>

    <string-array name="liste_devises">
        <item></item>
        <item>Livre</item>
        <item>Franc</item>
        <item>Dirham</item>
        <item>Dollar</item>
        <item>Euro</item>
        <item>Yen</item>
    </string-array>
</resources>
