<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_apropos"
        android:orderInCategory="100"
        android:title="@string/action_apropos"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_ListeDevise"
        android:orderInCategory="110"
        android:title="@string/titre_activity_liste_devises"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="120"
        android:title="@string/action_settings">
        <menu android:id="@+id/sous_menu" >
            <item
                android:id="@+id/action_langage"
                android:title="@string/action_langage"/>
            <item
                android:id="@+id/action_date"
                android:title="@string/action_date"/>
            <item
                android:id="@+id/action_display"
                android:title="@string/action_display"/>
        </menu>
    </item>

    <item
        android:id="@+id/action_quitter"
        android:orderInCategory="130"
        android:title="@string/action_quitter"/>

</menu>